# gitpilot

./: .gitignore  LICENSE  README.md  description.txt  gitignore  pyproject.toml
gitpilot/: cli.py  core.py  init.py
gitpilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
